@startuml
class ScreenExtensions <<static>> {
    + {static} ToScreenDto(screen:Screen) : ScreenDto
}
ScreenExtensions ..> ScreenDto: <<use>>
class ScreenDto {
    + Id : int <<get>> <<set>>
    + ScreenProfileId : int <<get>> <<set>>
}
ScreenExtensions ..> Screen: <<use>>
class Screen {
    + Id : int <<get>> <<set>>
    + ScreenProfileId : int <<get>> <<set>>
    + ScreenProfile : ScreenProfile <<get>> <<set>>
}
Screen ..> ScreenProfile: <<use>>
class ScreenProfile {
    + Id : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + Screens : List<Screen> <<get>> <<set>>
}
class List {
...
}
ScreenProfile ..> List: <<use>>
@enduml